Created data model

--- a/Grow.Server/appsettings.json
+++ b/Grow.Server/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GrowDbContext": "Server=(localdb)\\mssqllocaldb;Database=GrowServer;Trusted_Connection=True;ConnectRetryCount=0;MultipleActiveResultSets=true"
+  } 
 }
