--- a/Grow.Server/Grow.Server.csproj
+++ b/Grow.Server/Grow.Server.csproj
@@ -13,7 +13,9 @@
     <Folder Include="Areas\Team\Data\" />
     <Folder Include="Areas\Team\Models\" />
     <Folder Include="Areas\Team\Views\" />
+    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\img\2017\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
