--- a/Grow.Server/appsettings.json
+++ b/Grow.Server/appsettings.json
@@ -15,5 +15,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GrowDbContext": "Server=(localdb)\\mssqllocaldb;Database=GrowServer;Trusted_Connection=True;ConnectRetryCount=0;MultipleActiveResultSets=true"
-  } 
+  },
+  "AppSettings": {
+    "CurrentContestYear":  "2018"
+  }
 }
