--- a/Grow.Server/Grow.Server.csproj
+++ b/Grow.Server/Grow.Server.csproj
@@ -2,7 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>pioniergarage.grow.server</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="bundleconfig.json" />
+    <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Styles\libs\_functions.scss" />
+    <Content Include="Styles\libs\_mixins.scss" />
+    <Content Include="Styles\libs\_skel.scss" />
+    <Content Include="Styles\libs\_vars.scss" />
+    <Content Include="Styles\main.scss" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
@@ -15,6 +29,11 @@
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\img\2017\" />
     <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bundleconfig.json" />
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -69,6 +88,9 @@
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Home\Organizers.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Shared\Layouts\_BackendSingleCardLayout.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Shared\Layouts\_BackendLayout.cshtml">
