--- a/Grow.Server/appsettings.json
+++ b/Grow.Server/appsettings.json
@@ -17,6 +17,8 @@
     "GrowDbContext": "Server=(localdb)\\mssqllocaldb;Database=GrowServer;Trusted_Connection=True;ConnectRetryCount=0;MultipleActiveResultSets=true"
   },
   "AppSettings": {
-    "CurrentContestYear":  "2018"
+    "CurrentContestYear": "2018",
+    "AdminEmail": "admin@test.ts",
+    "AdminPassword": "tobeabletogrow"
   }
 }
