--- a/Grow.Server/compilerconfig.json
+++ b/Grow.Server/compilerconfig.json
@@ -4,6 +4,10 @@
     "outputFile": "wwwroot/css/main.css"
   },
   {
+    "inputFile": "Styles/backend.scss",
+    "outputFile": "wwwroot/css/backend.css"
+  },
+  {
     "inputFile": "Styles/paper-dashboard.scss",
     "outputFile": "wwwroot/plugins/paper-dashboard/css/paper-dashboard.css",
     "options": {
