Generalized Image entity class to File with more properties for expendabiity

--- a/Grow.Data/Grow.Data.csproj
+++ b/Grow.Data/Grow.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190614151223_Generalize-Files.cs" />
+    <Compile Remove="Migrations\20190614151534_Generalize-Files.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
