Added server API to accept uploaded images and save them to storage

--- a/Grow.Server/appsettings.json
+++ b/Grow.Server/appsettings.json
@@ -18,6 +18,7 @@
   },
   "AppSettings": {
     "AdminEmail": "admin@test.ts",
-    "AdminPassword": "tobeabletogrow"
+    "AdminPassword": "tobeabletogrow",
+    "StorageConnectionString": "UseDevelopmentStorage=true"
   }
 }
