--- a/Grow.Data/Grow.Data.csproj
+++ b/Grow.Data/Grow.Data.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20190614151223_Generalize-Files.cs" />
     <Compile Remove="Migrations\20190614151534_Generalize-Files.cs" />
+    <Compile Remove="Migrations\20190624175918_Add-EventResponse.cs" />
+    <Compile Remove="Migrations\20190625171705_Test.cs" />
   </ItemGroup>
 
   <ItemGroup>
