Improved tag helpers and added tag helper that searches navigation properties via AJAX for CRUD forms

--- a/Grow.Server/bundleconfig.json
+++ b/Grow.Server/bundleconfig.json
@@ -13,6 +13,9 @@
   },
   {
     "inputFiles": [
+      "wwwroot/js/grow.helpers.js",
+      "wwwroot/js/jquery.entitysearch.js",
+      "wwwroot/js/jquery.imageUploader.js",
       "wwwroot/js/backend.js"
     ],
     "outputFileName": "wwwroot/js/backend.min.js"
