--- a/Grow.Server/bundleconfig.json
+++ b/Grow.Server/bundleconfig.json
@@ -16,6 +16,7 @@
       "wwwroot/js/grow.helpers.js",
       "wwwroot/js/jquery.entitysearch.js",
       "wwwroot/js/jquery.imageUploader.js",
+      "wwwroot/js/jquery.conditionalCollapse.js",
       "wwwroot/js/backend.js"
     ],
     "outputFileName": "wwwroot/js/backend.min.js"
