--- a/Grow.Server/Grow.Server.csproj
+++ b/Grow.Server/Grow.Server.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Content Remove="bundleconfig.json" />
     <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\js\main.min.js" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\css\backend.css" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\main.min.js" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +37,7 @@
   <ItemGroup>
     <None Include="bundleconfig.json" />
     <None Include="compilerconfig.json" />
+    <None Include="wwwroot\js\main.min.js" />
   </ItemGroup>
 
   <ItemGroup>
