--- a/Grow.Server/Grow.Server.csproj
+++ b/Grow.Server/Grow.Server.csproj
@@ -76,7 +76,7 @@
     <Content Update="Areas\MyTeam\Views\Events\Closed.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Areas\MyTeam\Views\Events\View.cshtml">
+    <Content Update="Areas\MyTeam\Views\Events\Details.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Areas\MyTeam\Views\Home\Profile.cshtml">
